# terratorch

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.build  Dockerfile.pytest  Dockerfile.run  LICENSE  MIT_FILES.txt  README.md  README_Object_Detection.md  VULNERABILITIES.md  contribution_process.md  dummy.deleteme  eurosat_generic.yaml  example_timm.py  index.html  latest  mkdocs.yml  objects.inv  pin_requirements.py  placeholder.deleteme  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_studio.txt  requirements_test.txt  run_base_images_build.sh  run_images_build.sh  run_install.sh  run_packaging_images_build.sh  run_pytest_container.sh  run_pytest_images_build.sh  run_tests_container.sh  run_tests_with_build_container.sh  (+7 more)
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: feature_request.md  issue-report.md  report-a-vulnerability.md
.github/workflows/: ccc.yaml  container_nightly.yaml  container_stream.yaml  crosshair.yaml  dependabot.yaml  docker.yaml  docs.yaml  publish-pypi.yml  pylint.yml  test.yaml
0.99.5/: 404.html  index.html  objects.inv
0.99.5/architecture/: index.html
0.99.5/data/: index.html
0.99.5/encoder_decoder_factory/: index.html
0.99.5/examples/: index.html
0.99.5/faq/: index.html
0.99.5/models/: index.html
0.99.5/quick_start/: index.html
0.99.5/registry/: index.html
0.99.5/tasks/: index.html
1.0/: 404.html  index.html  search.html  sitemap.xml
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/architecture/: index.html
1.0.1/backbones/: index.html
1.0.1/changelog/: index.html
1.0.1/contributing/: index.html
1.0.1/data/: index.html
1.0.1/datamodules/: index.html
1.0.1/datasets/: index.html
1.0.1/decoders/: index.html
1.0.1/encoder_decoder_factory/: index.html
1.0.1/extra_model_structures/: index.html
1.0.1/generic_datamodules/: index.html
1.0.1/generic_datasets/: index.html
1.0.1/glossary/: index.html
1.0.1/heads/: index.html
1.0.1/license/: index.html
1.0.1/loss/: index.html
1.0.1/meta_models/: index.html
1.0.1/model_factories/: index.html
1.0.1/models/: index.html
1.0.1/necks/: index.html
1.0.1/quick_start/: index.html
1.0.1/registry/: index.html
1.0.1/tasks/: index.html
1.0.2/: 404.html  index.html  objects.inv  sitemap.xml
1.1/: 404.html  index.html  objects.inv  sitemap.xml
1.1.1/: 404.html  index.html  objects.inv  sitemap.xml
architecture/: index.html
backbones/: index.html
changelog/: index.html
contributing/: index.html
data/: index.html
datamodules/: index.html
datasets/: index.html
decoders/: index.html
docker/: Dockerfile  README.md  test_deploy.yaml
docs/: architecture.md  backbones.md  changelog.md  contributing.md  data.md  datamodules.md  datasets.md  decoders.md  encoder_decoder_factory.md  examples.md  extra_model_structures.md  generic_datamodules.md  generic_datasets.md  heads.md  index.md  inference.md  loss.md  meta_models.md  model_factories.md  models.md  necks.md  quick_start.md  registry.md  tasks.md  transforms.md
encoder_decoder_factory/: index.html
examples/: alexnet_custom_model.py  alexnet_custom_model_config.yaml  index.html  jsonargparser.py
extra_model_structures/: index.html
faq/: index.html
generic_datamodules/: index.html
generic_datasets/: index.html
glossary/: index.html
heads/: index.html
integrationtests/: conftest.py  old_test_predictions.py  run_base_set.sh  smoke.py  test_base_set.py  test_encoderdecoder_eo_v1_100_model_factory.yaml  test_encoderdecoder_eo_v2_100_model_factory.yaml  test_encoderdecoder_eo_v2_300_model_factory.yaml  test_encoderdecoder_eo_v2_600_model_factory.yaml  test_encoderdecoder_timm_resnet34_model_factory.yaml  test_finetune.py  test_predictions.py  test_prithvi_swinB_model_factory_config.yaml  test_prithvi_swinL_model_factory_config.yaml  test_prithvi_wxc_model_factory.py  test_prithvi_wxc_model_factory_config.yaml  test_prithvi_wxc_model_factory_config_ccc.yaml  test_smoke.py  test_smp_model_factory.yaml  test_smp_resnet34_model_factory_config.yaml  test_template.py  test_template_config.yaml  vllm_tests_set.sh
license/: index.html
loss/: index.html
meta_models/: index.html
model_factories/: index.html
models/: index.html
necks/: index.html
quick_start/: index.html
registry/: index.html
release/: log_to_wandb.py  pin_dependencies.py  release.py  requirements_release.txt
requirements/: dev.txt  optional.txt  required.txt  test.txt
search/: search_index.json
site/: 404.html
stable/: 404.html  index.html  objects.inv  sitemap.xml
stylesheets/: extra.css
tasks/: index.html
terratorch/: __init__.py  __main__.py  cli_tools.py  dummy.py  onnx_exporter.py  transforms.py  utils.py  validate_config.py  vllm.py
tests/: __init__.py  manufactured-finetune_aspphead.yaml  manufactured-finetune_prithvi_swin_B.yaml  manufactured-finetune_prithvi_swin_B_band_interval.yaml  manufactured-finetune_prithvi_swin_B_metrics_from_file.yaml  manufactured-finetune_prithvi_swin_B_segmentation.yaml  manufactured-finetune_prithvi_swin_B_string.yaml  manufactured-finetune_prithvi_swin_L.yaml  manufactured-finetune_prithvi_vit_100.yaml  manufactured-finetune_prithvi_vit_300.yaml  manufactured-finetune_unet.yaml  segmentation_test_input.tif  segmentation_test_label.tif  stds.txt  test_LoRA_for_GFMs.py  test_backbones.py  test_biomassters_dataset.py  test_boundary_mean_iou.py  test_classification_tasks.py  test_clay_1_5.py  test_clay_tasks.py  test_clay_v1.py  test_clay_v15_backbone.py  test_clay_v15_datamodule.py  test_cli_tools.py  test_custom_modules.py  test_datasets.py  test_decoders.py  test_dinov3.py  test_eccc_datamodule.py  test_encoder_decoder_model_factory.py  test_encoder_decoder_torchgeo_models.py  test_finetune.py  test_full_with_coverage_lsf.sh  test_full_with_coverage_lsf_aggregate.sh  test_generate.py  test_generic_dataset.py  test_generic_multimodal_dataset.py  test_geobench_v2_data_module.py  test_heliofm_tasks.py  (+38 more)
transforms/: index.html
(+1424 files in other folders)
